# api-suite

./: .gitignore  README.md
billa/: README.md  pyproject.toml  settings_test.py
billa/billa/: __init__.py  apps.py  context_processors.py  services.py  signals.py  throttle.py  urls.py
billa/billa/admin/: __init__.py
billa/billa/backends/: __init__.py  paypal_backend.py  stripe_backend.py  stub.py
billa/billa/management/commands/: dumppacks.py  loadpacks.py
billa/billa/migrations/: 0001_initial.py  0002_purchase_provider_fields.py  0003_add_credit_pack.py  0004_creditpack_single_price.py  0005_seed_credit_packs.py  0006_creditpack_free_tier.py
billa/billa/models/: __init__.py  credit_balance.py  credit_pack.py  purchase.py
billa/billa/templates/billa/: _dashboard_actions.html  _footer_links.html  _key_credits.html  _key_credits_th.html  _navbar_links.html  key_reveal.html  pricing.html  stub_confirm.html  terms.html  token_usage.html
billa/billa/views/: checkout.py  key_reveal.py  merge.py  paypal_return.py  pricing.py  set_default.py  stub_confirm.py  terms.py  token_usage.py  webhook.py
billa/tests/: test_biller_throttle.py  test_credit_balance.py  test_credit_pack.py  test_free_credits_signal.py  test_fulfill_purchase.py  test_key_reveal_view.py  test_merge_view.py  test_pricing_view.py  test_set_default_view.py  test_stub_confirm_view.py  urls_test.py
docca/: README.md  pyproject.toml  settings_test.py
docca/docca/: apps.py  urls.py  views.py
docca/docca/admin/: __init__.py  doc_endpoint.py  doc_parameter_def.py  doc_response_field.py  doc_tag.py
docca/docca/management/commands/: dumpdocs.py  loaddocs.py  syncdocs.py
docca/docca/migrations/: 0001_initial.py  0002_add_overview.py  0003_add_parameter_def.py  0004_add_response_field.py  0005_add_slug.py  0006_title_subtitle_description.py
docca/docca/models/: __init__.py  doc_endpoint.py  doc_parameter.py  doc_parameter_def.py  doc_response_field.py  doc_tag.py
docca/docca/templates/docca/: _endpoint_card.html  base.html  endpoint_detail.html  portal.html
docca/docca/templatetags/: docca_tags.py
docca/tests/: test_portal.py  test_slug.py  test_syncdocs.py  urls_test.py
kotta/: README.md  pyproject.toml  settings_test.py
kotta/kotta/: apps.py  exceptions.py  middleware.py  throttle.py  urls.py  views.py
kotta/kotta/admin/: __init__.py  endpoint.py  tier.py  usage_counter.py  user_tier.py
kotta/kotta/management/commands/: dumpconfig.py  loadconfig.py  syncendpoints.py
kotta/kotta/migrations/: 0001_initial.py  0002_rename_anon_fields.py  0003_usagecounter_apikey.py  0004_usagecounter_unique_constraints.py
kotta/kotta/models/: __init__.py  endpoint.py  tier.py  tier_endpoint_limit.py  usage_counter.py  user_tier.py
kotta/kotta/templates/kotta/: usage.html
kotta/tests/: test_anon_throttle.py  test_quota_tracking.py  test_throttle_utils.py  test_tier_resolution.py  test_tier_throttle.py
reggi/: LICENSE  README.md  pyproject.toml  settings_test.py
reggi/reggi/: apps.py  authentication.py  context_processors.py  decorators.py  mail.py  urls.py
reggi/reggi/admin/: __init__.py  api_key.py
reggi/reggi/forms/: __init__.py  api_key.py  change_password.py  login.py  password_reset.py  registration.py
reggi/reggi/migrations/: 0001_initial.py  0002_add_user_profile.py  0003_apikey_tier.py
reggi/reggi/models/: __init__.py  api_key.py  user_profile.py
reggi/reggi/templates/reggi/: _navbar_user.html  base.html  change_password.html  dashboard.html  email_verification_invalid.html  key_create.html  key_created.html  login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_invalid.html  profile.html  register.html  register_closed.html  resend_verification.html
reggi/reggi/templates/reggi/email/: password_reset_body.txt  verification_body.txt  verification_subject.txt
reggi/reggi/tests/: test_api_key_model.py  test_authentication.py  test_key_views.py  test_register.py  test_tier_assignment.py
reggi/reggi/views/: __init__.py  api_key.py  change_password.py  dashboard.py  email_verification.py  login.py  logout.py  password_reset.py  profile.py  register.py
romma/: README.md  pyproject.toml  settings_test.py
romma/romma/: context_processors.py  sitemaps.py  urls.py  views.py
romma/romma/templates/romma/: endpoints.html  index.html
romma/tests/: test_context_processor.py  test_endpoints_view.py  test_helpers.py  test_home_view.py  test_robots_txt.py  urls_test.py
tools/: pyproject.toml  settings_test.py
tools/tools/: fixtures.py
tools/tools/management/commands/: dumpsite.py  loadsite.py
