[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lxcor-docca"
version = "0.1.1"
description = "API documentation portal for Django REST Framework — auto-syncs endpoints, renders a searchable portal with tags, parameters, and response fields."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Alexandre Scozzafave Alves", email = "frontdesk@lxcor.com" }]
requires-python = ">=3.8"
keywords = ["django", "drf", "api", "documentation", "portal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "django>=3.2",
    "djangorestframework>=3.14",
]

[project.urls]
Homepage = "https://github.com/lxcor/api-suite/tree/main/docca"
Repository = "https://github.com/lxcor/api-suite"

[tool.setuptools.packages.find]
where = ["."]
include = ["docca*"]

[tool.setuptools.package-data]
"docca" = ["templates/**/*.html"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "settings_test"
pythonpath = ["."]
