[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "lxcor-romma"
version = "0.1.0"
description = "Hero landing page and endpoint catalog for Django APIs — wires docca's manifest into a ready-made portal with opt-in navbar fragments from billa and reggi."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Alexandre Scozzafave Alves", email = "frontdesk@lxcor.com" }]
requires-python = ">=3.8"
keywords = ["django", "landing-page", "api", "portal", "documentation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "django>=3.2",
    "lxcor-docca>=0.1.0",
]

[project.optional-dependencies]
billa = ["lxcor-billa>=0.1.0"]
reggi = ["lxcor-reggi>=0.1.0"]

[project.urls]
Homepage = "https://github.com/lxcor/api-suite/tree/main/romma"
Repository = "https://github.com/lxcor/api-suite"

[tool.setuptools.packages.find]
where = ["."]
include = ["romma*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "settings_test"
pythonpath = [".", "../docca", "../reggi", "../kotta"]
