[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lxcor-tools"
version = "0.1.0"
description = "Management commands and utilities for the lxcor API suite."
license = { text = "MIT" }
authors = [{ name = "Alexandre Scozzafave Alves", email = "frontdesk@lxcor.com" }]
requires-python = ">=3.8"
keywords = ["django", "management", "commands", "utilities"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "django>=3.2",
]

[project.urls]
Homepage = "https://github.com/lxcor/api-suite/tree/main/tools"
Repository = "https://github.com/lxcor/api-suite"

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "settings_test"
pythonpath = ["."]
